--- a/proxyservice/pom.xml
+++ b/proxyservice/pom.xml
@@ -142,6 +142,11 @@
         	<artifactId>axiom-impl</artifactId>
         	<version>1.2.13</version>
         </dependency>
+        <dependency>
+        	<groupId>commons-httpclient</groupId>
+        	<artifactId>commons-httpclient</artifactId>
+        	<version>3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
