--- a/proxyclient/pom.xml
+++ b/proxyclient/pom.xml
@@ -90,6 +90,16 @@
         	<artifactId>wsdl4j</artifactId>
         	<version>1.6.2</version>
         </dependency>
+        <dependency>
+        	<groupId>org.apache.axis2</groupId>
+        	<artifactId>axis2-transport-local</artifactId>
+        	<version>1.6.2</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.apache.axis2</groupId>
+        	<artifactId>axis2-transport-http</artifactId>
+        	<version>1.6.2</version>
+        </dependency>
     </dependencies>
 
 </project>
